Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
Impala 1.0
-
None
-
None
Description
When I issue a malformed query, e.g. "select blkjaslk", I get a query with a profile that's only partially populated. The profile we get ends up on the Impala Daemon web UI, and it gets into the log, it's missing a few fields I'd expect:
Here's an example of the profile we get:
Query:
Summary:
End Time: 2013-05-22 15:05:45
Query State: EXCEPTION
Query Timeline: 28.957ms
Start execution: 2.814ms (2.814ms)
Unregister query: 28.138ms (25.323ms)
ImpalaServer:
ClientFetchWaitTimer: 0ns
RowMaterializationTimer: 0ns
Here's a profile header from a well formed query:
Query (id=80436ade0370ffbb:3f1e8c5a1d5d898e):
Summary:
Start Time: 2013-05-22 09:56:01
End Time: 2013-05-22 09:58:46
Query Type: QUERY
Query State: FINISHED
Impala Version: impalad version 1.1 RELEASE (build 814a68e04c1d4bd209f60050da67832bdf2eff64)
User: root
Default Db: default
Sql Statement: select * from sample_07 where sleep(200)
So I think the things that would make sense here are:
query ID
start time
user
statement
I'd also like a copy of the error string that made it to the client, e.g. ERROR: AnalysisException: couldn't resolve column reference: 'blkjaslk'. I'd normally expect this in query status in the profile, but query status actually comes from a part of the profile that doesn't exist in the partial profile. I wonder if that means we need a different way to get the exception information.