IMPALA-365: Malformed queries don't have a completed summary profile